<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello World</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="end_half">End Half</string>
    <string name="end_match">End Match</string>
    <string name="app_name">Jugger Match</string>
    <string name="action_settings">Settings</string>
    <string name="hello_jugger">Hello jugger!</string>
    <string name="title_activity_match_config">Match Parameters</string>
    <string name="title_activity_match_timer">MatchTimer</string>
    <string name="title_activity_match_result">Match Result</string>
    <string name="title_activity_view_matches">View Matches</string>
    <string name="title_match_button">Match</string>
    <string name="title_quick_match_button">Quick Match</string>
    <string name="title_training_button">Training</string>
    <string name="title_team_A">Team 1 Name</string>
    <string name="title_team_B">Team 2 Name</string>
    <string name="title_number_of_halves">Number of Halves</string>
    <string name="title_number_of_stones">Number of Stones</string>
    <string name="title_location">Location</string>
    <string name="title_start_button">Start</string>
    <string name="title_back_button">Back</string>
    <string name="title_exit_button">Exit</string>
    <string name="match_date">01/11/2013,</string>
    <string name="date">Match date:</string>
    <string name="match_day">Tue,</string>
    <string name="colon">   :</string>
    <string name="location">Location:</string>
    <string name="match_location">Unspecified Location</string>
    <string name="team1">Team1 </string>
    <string name="team2">Team2 </string>
    <string name="score_team1">0</string>
    <string name="score_team2">0</string>
    <string name="match_end_time">12:45:39</string>
    <string name="title_jugger_matches">All Saved Matches</string>
    <string name="title_activity_add_match">Add Match</string>
    <string name="b_add_match">Add new match</string>
    <string name="b_save">Save</string>
    <string name="b_reject">Reject</string>
    <string name="title_add_match">Check match results</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="hint_team1">first team name</string>
    <string name="hint_team2">second team name</string>
    <string name="hint_score">score</string>
    <string name="insert_ok">Match results are saved successfully</string>
    <string name="insert_failed">Saving of match results failed</string>
    <string name="insert_rejected">Match results rejected and have not been saved</string>
    <string name="vs">vs</string>
    <string name="button_delete">Delete </string>
    <string name="button_close">Close </string>
    <string name="button_back">Back</string>
    <string name="delete_ok">Match results have been deleted successfuly! </string>
    <string name="delete_failed">Deletion failed! </string>
    <string name="positive_delete">Delete </string>
    <string name="negative_close">Close </string>
    <string name="title_activity_match_info">Match Info</string>
    <string name="delete_dialog_title">Deleting&#8230; </string>
    <string name="delete_dialog_message">Confirm deletion </string>
    <string name="delete_dialog_positive_button">"OK"</string>
    <string name="delete_dialog_negative_button">"Cancel"</string>
    <string name="search_field">Search&#8230; </string>
    <string name="title_match_info">Match Information</string>
    <string name="title_activity_settings">Jugger Match Settings</string>
    <string name="title_activity_help">Jugger Match Help</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="pickerlabel">Stone Duration</string>
    <string name="seconds">Seconds</string>
    <string name="usecountdown">Use countdown before run</string>
    <string name="stonescarry">Stones carry over halves</string>
    <string name="soundsprompt">Select Stone Sound</string>
    <string name="stoneduration">Stone duration (Milliseconds)</string>
    <string name="countdownsummary">Enable or disable countdown before run</string>
    <string name="carrysummary">Set whether stones are carried between halves</string>
    <string name="soundssummary">Chooses the sound to be played for each stone</string>
    <string name="durationsummary">Sets the duration of a stone, in milliseconds</string>
    <string name="alphanumericwarning">Only letters and numbers are allowed!</string>
    <string name="maxvaluewarning">Max halves is 9!</string>
    <string name="maxvaluestoneswarning">Max stones is 999!</string>
    <string name="teamaenterwarning">Please enter First Team Name!</string>
    <string name="teambenterwarning">Please enter Second Team Name!</string>
    <string name="halvesenterwarning">Please enter number of Halves!</string>
    <string name="stonesenterwarning">Please enter number of Stones!</string>
    <string name="locationenterwarning">Please enter match location!</string>
    <string name="S1">The Jugger Match Application allows you to track stones, scores, team names, locations, start and end times for Jugger Matches, as well as exporting match records to a remote database.</string>
    <string name="S2">The main menu offers the following options.</string>
    <string name="S3">"Match" allows you to set the names of teams, the number of stones per half, the number of halves, and the location.</string>
    <string name="S4">"Quick Match" creates a default match with "Team A" "Team B", 100 stones in 2 halves, and unspecified location.</string>
    <string name="S5">"Training" runs a timer with no record, no limit of stones, and no halves.</string>
    <string name="S6">"View Matches" allows you to view locally saved match records, and delete individual matches</string>
    <string name="S7">"Export Matches" allows you to select local match records for export to a remote database of your choosing.</string>
    <string name="S8">The timer view is used to track stones, scores and halves for a jugger match</string>
    <string name="S9">The "Play" button starts the timer, following a 3,2,1, Jugger! Countdown if you chose the countdown option in the settings, the "Start Time" of the match is recorded the first time the play button is pressed.</string>
    <string name="S10">The "Pause" button stops the timer.</string>
    <string name="S11">The "Skull" score button stops the clock and increments the corresponding teams score by one, a long press on this button reduces the corresponding teams score by one.</string>
    <string name="S12">The "Roll Back" button allows you to revert the stones and scores to their state before the "Play" button was last pressed.</string>
    <string name="S13">The "Fast forward" button allows you to skip to the end of the current half, if you chose the option to preserve stones in the settings, the remaining stones of the current half will be added to the next.</string>
    <string name="S14">When a half is finished the "End Half" button is displayed, which stops the timer, and starts the next half. If you chose the option to preserve stones in the settings, any stones which ran over time will be subtracted from the count for the next half. The scores and names of the teams also swap sides at this time.</string>
    <string name="S15">When the match is finished, the "End Match" button is displayed, which passes the result of the match to the results screen, and the "End Time" of the match is recorded at this time.</string>
    <string name="S16">On the result screen, you can review and choose to either "Save" or "Reject" the match result. After you choose, you will be returned to the main menu.</string>
    <string name="S17">The "View Matches" view displays a scrollable list of all saved matches, you can tap an individual match to view the full result, and choose to delete the match.</string>
    <string name="S18">The "Export Matches" view displays a similar list to "View Matches". You can select matches with a checkbox, and press "Next". On the next screen, you can choose a saved database or enter details of a new database to export the match result. When you are done, press "Export".</string>
    <string name="title_activity_export_matches_results">Export Match Results</string>
    <string name="button_export">Export </string>
    <string name="empty_database">Database is empty, please insert matches results !"</string>
    <string name="check_box_img"> Check box image</string>
    <string name="prog_dialog_title"> Exporting matches results&#8230;</string>
    <string name="please_wait"> Please wait&#8230;</string>
    <!-- string name="remote_DB_url">http://10.0.2.2/test2.php</string -->
    <string name="remote_DB_url">http://duncanw.netsoc.com/matches_export.php</string>

    <string-array name="soundsarray">
        <item name="beep">High Pitched Beep</item>
        <item name="beat">Digital Bass Beat</item>
        <item name="drum">Real Drum Beat</item>
    </string-array>
    <string-array name="soundfiles">
        <item name="beep">highbeep</item>
        <item name="beat">beat</item>
        <item name="drum">drum</item>
    </string-array>

    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
