<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
  
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S1" 
            android:layout_margin = "@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S2" 
            android:layout_margin = "@dimen/activity_horizontal_margin"/>
       
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S3"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S4"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S5"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S6"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S7" 
            android:layout_margin = "@dimen/activity_horizontal_margin"/>
        
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S8"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:src="@drawable/play" />
            
            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/S9" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:src="@drawable/pause" />
            
            <TextView  
                android:id="@+id/textView10"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:text="@string/S10" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:src="@drawable/scoreplus" />
            
            <TextView  
                android:id="@+id/textView11"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:text="@string/S11" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            
            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:src="@drawable/rollback" />
            
            <TextView  
                android:id="@+id/textView12"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:text="@string/S12" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
            
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:src="@drawable/fastforward" />
            
            <TextView  
                android:id="@+id/textView13"
                android:layout_width="0dip"
                android:layout_weight="1.0" 
                android:layout_height="wrap_content" 
                android:text="@string/S13" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S14" 
            android:layout_margin = "@dimen/activity_horizontal_margin"/>
        
        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S15"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S16"
            android:layout_margin = "@dimen/activity_horizontal_margin" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S17"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S18"
            android:layout_margin = "@dimen/activity_horizontal_margin" />
        
        
    </LinearLayout>
</ScrollView>