<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    
    <Spinner
        android:id="@+id/stonesoundspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/soundsarray"
        android:prompt="@string/soundsprompt"/>
    
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/pickerlabel"
    android:textAppearance="?android:attr/textAppearanceLarge" />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
   <NumberPicker
       android:id="@+id/numberPicker1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

   <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="."
    android:textAppearance="?android:attr/textAppearanceLarge" />
   
  <NumberPicker
      android:id="@+id/numberPicker2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>
  
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/seconds"
    android:textAppearance="?android:attr/textAppearanceMedium" />
     
  </LinearLayout>

  <CheckBox
      android:id="@+id/checkBox1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/usecountdown" />

  <CheckBox
      android:id="@+id/checkBox2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/stonescarry" />


  <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save" />

</LinearLayout>