<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin = "@dimen/activity_horizontal_margin" >
    
<Button
   		    android:id="@+id/match_button"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_weight="1"
   		    android:onClick="invokes_activity_match_config"
   		    android:text="@string/title_match_button" />

<Button
   		    android:id="@+id/quick_match_button"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_weight="1"
   		    android:text="@string/title_quick_match_button" />

<Button
   		    android:id="@+id/training_button"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_weight="1"
   		    android:text="@string/title_training_button" />

<Button
   		    android:id="@+id/viewMatches_button"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_weight="1"
   		    android:text="@string/title_activity_view_matches" />

<Button
   		    android:id="@+id/exportMatchResults_button"
   		    android:layout_width="match_parent"
   		    android:layout_height="wrap_content"
   		    android:layout_weight="1"
   		    android:text="@string/title_activity_export_matches_results" />


</LinearLayout>
</ScrollView>